--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,9 @@ uuid = "18cd0bd4-3461-488c-9dae-1a490b172243"
 authors = ["Chris Foster <chris42f@gmail.com> and contributors"]
 version = "0.1.0"
 
+[deps]
+Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
+
 [compat]
 julia = "1"
 
