--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,10 @@
 name: CI
 on:
-  - push
-  - pull_request
+  push:
+    branches:
+      - master
+    tags: '*'
+  pull_request:
 jobs:
   test:
     name: Julia ${{ matrix.version }} - ${{ matrix.os }} - ${{ matrix.arch }}
@@ -10,7 +13,7 @@ jobs:
       matrix:
         version:
           - '1.4'
-          - '1.5'
+          - 'latest'
           - 'nightly'
         os:
           - ubuntu-latest
