--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,10 @@
 name: CI
 on:
-  - push
-  - pull_request
+  push:
+    branches:
+      - master
+    tags: '*'
+  pull_request:
 jobs:
   test:
     name: Julia ${{ matrix.version }} - ${{ matrix.os }} - ${{ matrix.arch }}
@@ -10,13 +13,23 @@ jobs:
       matrix:
         version:
           - '1.4'
+          - '1.5'
           - 'nightly'
         os:
           - ubuntu-latest
           - macOS-latest
           - windows-latest
         arch:
+          - x86
           - x64
+        exclude:
+          # Remove some configurations from the build matrix to reduce CI time.
+          # See https://github.com/marketplace/actions/setup-julia-environment
+          # MacOS not available on x86
+          - {os: 'macOS-latest', arch: 'x86'}
+          # Don't test on all versions
+          - {os: 'macOS-latest', version: '1.4'}
+          - {os: 'windows-latest', version: '1.4'}
     steps:
       - uses: actions/checkout@v2
       - uses: julia-actions/setup-julia@v1
